--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.screens.SettingsFragment">
@@ -9,69 +9,67 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="24dp"
+        android:orientation="vertical"
         android:padding="16dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
             android:layout_marginTop="10dp"
+            android:padding="8dp"
             android:text="@string/settings"
-            android:textSize="24sp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/edElectricPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
-            android:hint="@string/enter_current_tariff"
-            android:inputType="number"
             android:autofillHints=""
-            />
+            android:hint="@string/enter_current_tariff"
+            android:inputType="numberDecimal"
+            android:textAlignment="center"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/edWaterPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
-            android:hint="@string/enter_current_tariff"
-            android:inputType="number"
             android:autofillHints=""
-            />
+            android:hint="@string/enter_current_tariff"
+            android:inputType="numberDecimal"
+            android:textAlignment="center"
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/edGasPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="24sp"
-            android:hint="@string/enter_current_tariff"
-            android:inputType="number"
             android:autofillHints=""
-            />
+            android:hint="@string/enter_current_tariff"
+            android:inputType="numberDecimal"
+            android:textAlignment="center"
+            android:textSize="24sp" />
 
         <Button
-            android:id="@+id/btnSaveElectricMeter"
+            android:id="@+id/btnSaveSettings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:cornerRadius="5dp"
             android:text="@string/save"
-            />
+            app:cornerRadius="5dp" />
 
         <Button
             android:id="@+id/btnCancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:cornerRadius="5dp"
             android:text="@string/cancel"
-            />
+            app:cornerRadius="5dp" />
 
 
     </LinearLayout>
