added description of previous meter reading

--- a/app/src/main/res/layout/fragment_electric_meter.xml
+++ b/app/src/main/res/layout/fragment_electric_meter.xml
@@ -23,6 +23,14 @@
             android:textSize="24sp" />
 
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textAlignment="center"
+            android:text="Previous counter"
+            android:textSize="20sp" />
+
+        <TextView
             android:id="@+id/tvPrevCounter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
