--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -97,12 +97,12 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="250dp"/>
+            android:layout_height="200dp"/>
 
         <Button
             android:id="@+id/btnClearDb"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:text="Очистить БД"
             app:cornerRadius="5dp" />
 
