--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
@@ -22,7 +23,7 @@
                 android:layout_weight="1"
                 android:gravity="end"
                 android:padding="10dp"
-                android:text="Report for: "
+                android:text="@string/report_for"
                 android:textSize="18sp" />
 
             <TextView
@@ -48,7 +49,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Title"
+                android:text="@string/title"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -58,7 +59,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Previous"
+                android:text="@string/previous"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -68,7 +69,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Current"
+                android:text="@string/current"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -78,7 +79,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Consumption"
+                android:text="@string/consumption"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -88,7 +89,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Payment"
+                android:text="@string/payment"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -106,7 +107,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Electric"
+                android:text="@string/electric"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -162,7 +163,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Water"
+                android:text="@string/water"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -218,7 +219,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Gas"
+                android:text="@string/gas"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -263,5 +264,16 @@
                 android:textSize="16sp" />
         </TableRow>
 
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/cancel"
+            app:cornerRadius="5dp" />
+
     </TableLayout>
+
+
+
 </LinearLayout>
