--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -9,75 +9,86 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:background="@drawable/fon"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:paddingTop="24dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:autoSizeMaxTextSize="24sp"
             android:padding="8dp"
             android:text="@string/settings"
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textAlignment="center"
+            android:autoSizeMaxTextSize="24sp"
             android:text="@string/electric_price"
-            android:textSize="20sp" />
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
         <EditText
             android:id="@+id/edElectricPrice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="10dp"
+            android:autoSizeMaxTextSize="24sp"
             android:autofillHints=""
             android:hint="@string/enter_current_tariff"
             android:inputType="numberDecimal"
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textAlignment="center"
+            android:autoSizeMaxTextSize="24sp"
             android:text="@string/water_price"
-            android:textSize="20sp" />
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
         <EditText
             android:id="@+id/edWaterPrice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="10dp"
+            android:autoSizeMaxTextSize="24sp"
             android:autofillHints=""
             android:hint="@string/enter_current_tariff"
             android:inputType="numberDecimal"
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textAlignment="center"
+            android:autoSizeMaxTextSize="24sp"
             android:text="@string/gas_price"
-            android:textSize="20sp" />
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
         <EditText
             android:id="@+id/edGasPrice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_marginTop="10dp"
+            android:autoSizeMaxTextSize="24sp"
             android:autofillHints=""
             android:hint="@string/enter_current_tariff"
             android:inputType="numberDecimal"
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textColorHint="@color/white" />
 
         <Button
             android:id="@+id/btnSaveSettings"
@@ -97,7 +108,7 @@
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp" />
 
         <Button
             android:id="@+id/btnClearDb"
