--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -9,8 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="24dp"
+        android:padding="24dp"
         android:gravity="center"
+        android:background="@drawable/fon"
         android:orientation="vertical"
         android:textAlignment="center">
 
@@ -18,7 +19,7 @@
             android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:autoSizeMaxTextSize="24sp"
             android:textColor="#FFFF0000"
             android:layout_marginBottom="20dp" />
 
