--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -11,7 +11,8 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp">
+        android:background="@drawable/fon"
+        android:padding="20dp">
 
         <TableRow
             android:layout_width="match_parent"
@@ -23,6 +24,7 @@
                 android:layout_weight="1"
                 android:gravity="end"
                 android:padding="10dp"
+                android:textColor="@color/white"
                 android:text="@string/report_for"
                 android:textSize="18sp" />
 
@@ -32,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="start"
+                android:textColor="@color/white"
                 android:padding="5dp"
                 android:textSize="18sp" />
 
