--- a/app/src/main/res/layout/fragment_water_meter.xml
+++ b/app/src/main/res/layout/fragment_water_meter.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/fon"
         android:orientation="vertical"
+        android:padding="16dp"
         android:paddingTop="24dp">
 
         <TextView
