Added date selection when entering the current counter

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:autoSizeMaxTextSize="24sp"
+            android:textSize="20sp"
             android:padding="8dp"
             android:text="@string/settings"
             android:textAlignment="center"
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:autoSizeMaxTextSize="24sp"
+            android:textSize="20sp"
             android:text="@string/electric_price"
             android:textAlignment="center"
             android:textColor="@color/white" />
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="10dp"
-            android:autoSizeMaxTextSize="24sp"
+            android:textSize="20sp"
             android:autofillHints=""
             android:hint="@string/enter_current_tariff"
             android:inputType="numberDecimal"
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:autoSizeMaxTextSize="24sp"
+            android:textSize="20sp"
             android:text="@string/water_price"
             android:textAlignment="center"
             android:textColor="@color/white" />
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="10dp"
-            android:autoSizeMaxTextSize="24sp"
+            android:textSize="20sp"
             android:autofillHints=""
             android:hint="@string/enter_current_tariff"
             android:inputType="numberDecimal"
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:autoSizeMaxTextSize="24sp"
+            android:textSize="20sp"
             android:text="@string/gas_price"
             android:textAlignment="center"
             android:textColor="@color/white" />
@@ -82,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="10dp"
-            android:autoSizeMaxTextSize="24sp"
+            android:textSize="20sp"
             android:autofillHints=""
             android:hint="@string/enter_current_tariff"
             android:inputType="numberDecimal"
