--- a/app/src/main/res/layout/fragment_empty_not_found.xml
+++ b/app/src/main/res/layout/fragment_empty_not_found.xml
@@ -12,6 +12,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/data_not_found"
+        android:contentDescription="@string/data_not_found"
         app:layout_constraintBottom_toTopOf="@id/tvDataNotFound"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -39,5 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteX="0dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
