--- a/app/src/main/res/layout/fragment_empty_not_found.xml
+++ b/app/src/main/res/layout/fragment_empty_not_found.xml
@@ -1,46 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fon"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:background="@drawable/fon">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/data_not_found"
-        android:contentDescription="@string/data_not_found"
-        app:layout_constraintBottom_toTopOf="@id/tvDataNotFound"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/tvDataNotFound"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/data_not_found"
-        android:textColor="#FFFF0000"
-        android:textSize="28sp"
-        app:layout_constraintBottom_toTopOf="@id/btnCancel"
-        tools:layout_editor_absoluteX="-16dp" />
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="268dp"
-        android:text="@string/cancel"
-        app:cornerRadius="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:contentDescription="@string/data_not_found"
+            android:src="@drawable/data_not_found"
+            tools:ignore="ImageContrastCheck" />
 
+        <TextView
+            android:id="@+id/tvDataNotFound"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:text="@string/data_not_found"
+            android:textColor="@color/white"
+            android:textSize="28sp" />
 
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/cancel"
+            app:cornerRadius="5dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+
+</ScrollView>
