--- a/app/src/main/res/layout/fragment_previous_counter_dialog.xml
+++ b/app/src/main/res/layout/fragment_previous_counter_dialog.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/fon"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/fon"
     android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/previous_counter"
         android:textColor="@color/white"
-        android:text="@string/previous_counter" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/edCounterValue"
@@ -21,10 +23,12 @@
         android:layout_marginTop="10dp"
         android:autofillHints=""
         android:gravity="center"
+        android:hint="@string/enter_counter_value"
+        android:inputType="number"
         android:textColor="@color/white"
         android:textColorHint="@color/white200"
-        android:hint="@string/enter_counter_value"
-        android:inputType="number" />
+        android:textSize="20sp"
+        tools:ignore="TextContrastCheck" />
 
     <Button
         android:id="@+id/btnSave"
