--- a/app/src/main/res/layout/fragment_electric_meter.xml
+++ b/app/src/main/res/layout/fragment_electric_meter.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:paddingTop="24dp"
-    tools:context=".presentation.screens.ElectricMeterFragment">
+    tools:context=".presentation.screens.ElectricCounterFragment">
 
         <TextView
             android:layout_width="match_parent"
